# stock-data-skill

./: .clawhubignore  .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: pypi.yaml
references/: crypto-analyze.md  market-overview.md  portfolio-analyze.md  sector-analyze.md  stock-analyze.md  stock-health-check.md  tools.md
scripts/: install.sh
stock_data_skill/: __init__.py  __main__.py  cli.py  env.py
